# kaggle-dog-breed-identification

./: .gitignore  README.md  Untitled-1.ipynb  pyproject.toml  requirements.txt  solve.ipynb  solve_1.ipynb  solve_efficientnet_kfold.ipynb  solve_vit_kfold.ipynb
