[project]
name = "kaggle-dog-breed-identification"
version = "0.1.0"
description = ""
authors = [
    {name = "Jlychee",email = "2006tka@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi (==2026.5.20)",
    "charset-normalizer (==3.4.7)",
    "cuda-bindings (==13.3.0)",
    "cuda-pathfinder (==1.5.5)",
    "cuda-toolkit (==13.0.2)",
    "filelock (==3.29.0)",
    "fsspec (==2026.4.0)",
    "idna (==3.16)",
    "jinja2 (==3.1.6)",
    "joblib (==1.5.3)",
    "kagglehub (==1.0.1)",
    "kagglesdk (==0.1.25)",
    "markupsafe (==3.0.3)",
    "mpmath (==1.3.0)",
    "numpy (==2.4.6)",
    "nvidia-cublas (==13.1.1.3)",
    "nvidia-cuda-cupti (==13.0.85)",
    "nvidia-cuda-nvrtc (==13.0.88)",
    "nvidia-cuda-runtime (==13.0.96)",
    "nvidia-cudnn-cu13 (==9.20.0.48)",
    "nvidia-cufft (==12.0.0.61)",
    "nvidia-cufile (==1.15.1.6)",
    "nvidia-curand (==10.4.0.35)",
    "nvidia-cusolver (==12.0.4.66)",
    "nvidia-cusparse (==12.6.3.3)",
    "nvidia-cusparselt-cu13 (==0.8.1)",
    "nvidia-nccl-cu13 (==2.29.7)",
    "nvidia-nvjitlink (==13.0.88)",
    "nvidia-nvshmem-cu13 (==3.4.5)",
    "nvidia-nvtx (==13.0.85)",
    "packaging (==26.2)",
    "pandas (==3.0.3)",
    "protobuf (==7.35.0)",
    "python-dateutil (==2.9.0.post0)",
    "pyyaml (==6.0.3)",
    "requests (==2.34.2)",
    "scikit-learn (==1.8.0)",
    "scipy (==1.17.1)",
    "setuptools (==81.0.0)",
    "six (==1.17.0)",
    "sympy (==1.14.0)",
    "threadpoolctl (==3.6.0)",
    "tqdm (==4.67.3)",
    "typing-extensions (==4.15.0)",
    "urllib3 (==2.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
